--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "nltk-tree-stubs"
 version = "3.7.0.1.0"
 description = "Type stubs for nltk.tree"
 authors = ["Nori Hayashi <net@hayashi-lin.net>"]
+license = "Apache-2.0"
 readme = "README.md"
 packages = [
     { include = "nltk-stubs" },
